// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportWallet renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      Object {
        "padding": 20,
        "paddingTop": 0,
      }
    }
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="always"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollIntoView={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    update={[Function]}
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "marginBottom": 20,
            },
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../src/images/coins-logo.png",
            }
          }
          style={
            Object {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 22,
            "paddingBottom": 20,
            "textAlign": "center",
          }
        }
      >
        title
      </Text>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        userYourBackupKey
      </Text>
      <View
        style={
          Object {
            "borderColor": "#D1D5D8",
            "borderRadius": 3,
            "borderWidth": 1,
            "height": 145,
            "marginTop": 20,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          enablesReturnKeyAutomatically={true}
          multiline={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="backupKeyPlaceholder"
          placeholderTextColor="#D1D5D8"
          rejectResponderTermination={true}
          style={
            Object {
              "color": "#555",
              "flex": 1,
              "fontFamily": "Hind-Regular",
              "fontSize": 16,
              "marginLeft": 10,
            }
          }
          testID="ImportWalletBackupKeyInputField"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 12,
            "lineHeight": 16,
            "marginHorizontal": 2,
            "marginTop": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "Hind-SemiBold",
            }
          }
        >
          tip
        </Text>
        backupKeyTip
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "flexDirection": "row",
        },
        null,
        null,
        undefined,
        Object {
          "backgroundColor": "#A3EBC6",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackground",
          "type": "ThemeAttrAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#A3EBC6",
          },
          Object {
            "height": 50,
          },
          Object {
            "borderWidth": 0,
          },
        ]
      }
      testID="ImportWalletButton"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-SemiBold",
                "fontSize": 16,
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "paddingLeft": 5,
                "paddingRight": 5,
              },
            ]
          }
        >
          restoreWallet
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 5,
        "paddingVertical": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      lostYourKey.0
       
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "color": "#42D689",
              "fontFamily": "Hind-Medium",
              "fontSize": 14,
              "lineHeight": 18,
            },
            undefined,
          ]
        }
      >
        lostYourKey.1
      </Text>
    </View>
  </View>
</View>
`;

exports[`ImportWallet renders with an empty wallet 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingBottom": 30,
        "paddingHorizontal": 30,
        "textAlign": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "marginBottom": 20,
          },
          Object {},
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "height": 35,
            "width": 35,
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 22,
          "paddingBottom": 20,
          "textAlign": "center",
        }
      }
    >
      0.00
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 17,
          "lineHeight": 26,
        }
      }
    >
      emptyWalletWarning
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 17,
          "lineHeight": 26,
        }
      }
    >
      useEmptyAnyway
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "flexDirection": "row",
        },
        null,
        null,
        undefined,
        Object {
          "backgroundColor": "#42D689",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackground",
          "type": "ThemeAttrAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#42D689",
          },
          Object {
            "height": 50,
          },
          Object {
            "borderWidth": 0,
          },
        ]
      }
      testID="UseEmptyWalletButton"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-SemiBold",
                "fontSize": 16,
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "paddingLeft": 5,
                "paddingRight": 5,
              },
            ]
          }
        >
          useEmptyWallet
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "paddingBottom": 15,
            },
            Object {
              "marginTop": 12,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-Bold",
              },
            ]
          }
        >
          tip
        </Text>
        backupKeyTip
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "flexDirection": "row",
        },
        null,
        null,
        undefined,
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackground",
          "type": "ThemeAttrAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "height": 50,
          },
          Object {
            "borderWidth": 0,
          },
        ]
      }
      testID="TryAnotherKeyButton"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-SemiBold",
                "fontSize": 16,
              },
              Object {
                "color": "#42D689",
              },
              Object {
                "paddingLeft": 5,
                "paddingRight": 5,
              },
            ]
          }
        >
          tryAnotherKey
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 5,
        "paddingVertical": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      lostYourKey.0
       
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "color": "#42D689",
              "fontFamily": "Hind-Medium",
              "fontSize": 14,
              "lineHeight": 18,
            },
            undefined,
          ]
        }
      >
        lostYourKey.1
      </Text>
    </View>
  </View>
</View>
`;
